--- a/compose.yml
+++ b/compose.yml
@@ -7,4 +7,10 @@ services:
     volumes:
       - '.:/usr/src/app'
     ports:
-      - '8080:8080'
+      - '8024:8080'
+  web:
+    image: nginx
+    volumes:
+      - ./infra/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8080:80"
