--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/felipee-monteiro/go-kidding#readme",
   "dependencies": {
-    "nan": "^2.22.0",
-    "node-addon-api": "^8.3.0"
+    "node-addon-api": "*"
   }
 }
